--- a/styles.css
+++ b/styles.css
@@ -477,7 +477,7 @@ section {
   padding: clamp(80px, 10vw, 120px) 5vw;
 }
 
-section > *:not(.overlay):not(.area) {
+section > *:not(.overlay):not(.area):not(.skills-carousel-wrapper) {
   max-width: 1100px;
   width: 100%;
   margin-left: auto;
@@ -913,6 +913,7 @@ body.js-enabled section:not(#inicio).in-view {
 .skills-carousel-wrapper {
   position: relative;
   width: 100vw;
+  max-width: none;
   margin-left: calc(-50vw + 50%);
   margin-right: calc(-50vw + 50%);
   margin-top: clamp(60px, 10vw, 100px);
@@ -921,6 +922,7 @@ body.js-enabled section:not(#inicio).in-view {
   z-index: 1;
   left: 0;
   right: 0;
+  transform: translateX(calc(-5vw));
 }
 
 .skills-carousel-fade-left,
